Levitation import of page 2399 rev 7797 (minor).

--- a/0-/GSoC:2007/Service Clients/scm.mediawiki
+++ b/0-/GSoC:2007/Service Clients/scm.mediawiki
@@ -55,3 +55,4 @@ Contents of file "shutdown"
 You may have noticed that I do not have "argv" in the config file, because it is optional and I do not need to pass the executable file any argument.  For describing method, method name should show up as the keyword, and method description is on the right hand side of the equal sign.
 
 ==scm API==
+se.xmms.scm.management
