--- a/0-/GSoC:2007/Service Clients.mediawiki
+++ b/0-/GSoC:2007/Service Clients.mediawiki
@@ -15,6 +15,8 @@ Service client idea empowers XMMS2 with unlimited expendibility.  Different serv
 ...
 [[{{PAGENAME}}/Design|Design]]
 ...
+[[{{PAGENAME}}/scm|Manager]]
+...
 [http://eblog.zeegeek.cn Blog]
 
 }}
