--- a/0-/GSoC:2007/Service Clients.mediawiki
+++ b/0-/GSoC:2007/Service Clients.mediawiki
@@ -17,6 +17,8 @@ Service client idea empowers XMMS2 with unlimited expendibility.  Different serv
 ...
 [[{{PAGENAME}}/scm|Manager]]
 ...
+[[{{PAGENAME}}/Tutorial|Tutorial]]
+...
 [http://eblog.zeegeek.cn Blog]
 
 }}
