--- a/0-/Client:Esperanza/Roadmap.mediawiki
+++ b/0-/Client:Esperanza/Roadmap.mediawiki
@@ -61,3 +61,4 @@ This page tries to collect the future of Esperanza. Please put new ideas in the 
 * &#10003; add a setting, where you can choose between single- or double-click on the trayicon to show respectively hide the playerwindow.
 * &#10003; add GlobalShortcut functionality for e.g. play <=> pause, next song, previous song, show <=> hide window
 * &#10003; preferences dialog for direct access to xmms2d settings
+* &#10003; let the user set the time the notification popup should appear
