/* play */ added optional argument I would like to have
Levitation import of page 2332 rev 7819.

--- a/0-/New korving CLI.mediawiki
+++ b/0-/New korving CLI.mediawiki
@@ -97,9 +97,11 @@ equivalent to running ''command -h'' or ''command --help''.
 If used in shell-mode, exits the client.  In inline mode, it does not
 do anything.
 
-==== play ====
+==== play [pattern] ====
 
 Starts playback.
+
+If pattern is given, do the same that "xmms2 jump <pattern> && xmms2 play" would do (ie, don't play if pattern doesn't work).
 
 ==== pause ====
 
